Fixed: alignment of kit badge in the product label in info (#658)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -406,6 +406,15 @@ img {
   min-width: 9ch;
 }
 
+.kit-label {
+  display: flex;
+  align-items: center;
+}
+
+.kit-label > ion-badge {
+  margin-left: 8px;
+}
+
 @media (min-width: 991px) {
   /* shipment card desktop layout start */
   ion-searchbar.searchbar {
